--- a/ProyectosEnDJango/proyecto001/miapp/templates/saludo.html
+++ b/ProyectosEnDJango/proyecto001/miapp/templates/saludo.html
@@ -1,13 +1,13 @@
 {% extends 'layout.html' %}
 
 {% block title %}
-    saludo
+    {{titulo}}
 {% endblock %}
 
 {% block content %}
     {{ block.super }}
     <h1 class="title">Bienvenidos</h1>
-    <h2>Flor Cerdán</h2>
+    <h2>{{autor_saludo}}</h2>
     <h3>Python.....</h3>
     {{ block.super}}
     
