--- a/ProyectosEnDJango/proyecto001/miapp/templates/filtros.html
+++ b/ProyectosEnDJango/proyecto001/miapp/templates/filtros.html
@@ -5,3 +5,14 @@
 Filtro<br>
 <p> Cadena Original: {{encabezado|default:"Sección sin titulo"}}</p>
 <p> Uso join: {{encabezado|join:'-'}}</p>
+<p> Tamaño de la cadena: {{encabezado|length}} caracteres</p>
+<p> Mayúscula: {{encabezado|upper}}</p>
+<p> Minúscula: {{encabezado|lower}}</p>
+<p> Contador de Palabras: {{encabezado|wordcount}}</p>
+<br>
+<p> Lista Original: {{estudiantes}}</p>
+<p> Uso join: {{estudiantes|join:'-'}}</p>
+<p> Primero de la lista: {{estudiantes|first}}</p>
+<p> Último de la lista: {{estudiantes|last}}</p>
+<p> Tamaño de la lista: {{estudiantes|length}}</p>
+
