--- a/ProyectosEnDJango/proyecto001/miapp/templates/saludo.html
+++ b/ProyectosEnDJango/proyecto001/miapp/templates/saludo.html
@@ -8,6 +8,8 @@
     {{ block.super }}
     <h1 class="title">Bienvenidos</h1>
     <h2>{{autor_saludo}}</h2>
+    {% load filters %}
+    {{"Iniciando curso LP3"|saludo|safe}}
     <h3>Python.....</h3>
     {{ block.super}}
     
